(bug) fixed the action menu alignment

--- a/frontend/src/components/molecules/CardTask.css
+++ b/frontend/src/components/molecules/CardTask.css
@@ -22,4 +22,5 @@
 
 .action-menu {
   justify-self: flex-end;
+  margin-left: auto;
 }
